--- a/BUILD-WEEK-4_TEAM-7/BUILD-WEEK-4_TEAM-7.csproj
+++ b/BUILD-WEEK-4_TEAM-7/BUILD-WEEK-4_TEAM-7.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>BUILD_WEEK_4_TEAM_7</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
