--- a/BUILD-WEEK-4_TEAM-7/appsettings.json
+++ b/BUILD-WEEK-4_TEAM-7/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=Super_Potenza\\SQLEXPRESS;Database=BUILDWEEK_TEAM7;User Id=sa;Password=sa;TrustServerCertificate=true;"
     }
-  },
-  "AllowedHosts": "*"
 }
