--- a/BUILD-WEEK-4_TEAM-7/appsettings.json
+++ b/BUILD-WEEK-4_TEAM-7/appsettings.json
@@ -7,7 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-GF8E309P\\SQLEXPRESS;Database=BUILDWEEK_TEAM7;User Id=sa;Password=sa;TrustServerCertificate=true;"
-
+        "DefaultConnection": "Server=Super_Potenza\\SQLEXPRESS;Database=BUILDWEEK_TEAM7;User Id=sa;Password=sa;TrustServerCertificate=true;"
     }
 }
