--- a/BUILD-WEEK-4_TEAM-7/BUILD-WEEK-4_TEAM-7.csproj
+++ b/BUILD-WEEK-4_TEAM-7/BUILD-WEEK-4_TEAM-7.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\img\trash2.svg">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
